--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@test/*": ["src/app/test/*"]
+    }
   },
   "files": [
     "src/main.ts"
