--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@popperjs/core": "^2.11.8",
+    "angular-local-storage": "^0.7.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "html2canvas": "^1.4.1",
